--- a/css/header.css
+++ b/css/header.css
@@ -43,6 +43,10 @@
    justify-content: flex-end;
 }
 
+.nav-menu__item:hover {
+   color: var(--clr-accent-dark);
+}
+
 .nav-menu__cart {
    display: flex;
    gap: 10px;
@@ -122,7 +126,6 @@
    height: 100%;
    background: var(--clr-light);
    transition: left 0.6s ease;
-   overflow: auto;
    padding-top: 40px;
    text-align: center;
    margin-bottom: 20px;
